refactor grid iteration

--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -6,11 +6,8 @@
   </defs>
 
   <g class="hex-wrap">
-    <% (Game::HEX_W..Game::HEX_W*Game::MAP_COLS).step(Game::HEX_W).each_with_index do |x, i| %>
-      <% (Game::HEX_H..Game::HEX_H*Game::MAP_ROWS).step(Game::HEX_H).each_with_index do |y, j| %>
-        <% hex_id = Game::COL_ALPHA[i]+j.to_s %>
-        <use href="#hex" id="<%=hex_id%>" transform="translate(<%=x%>,<%=i % 2 == 0 ? y : y + Game::HEX_H / 2 %>)" /> 
-      <% end %>
-    <% end %>
+    <% @game.grid_enumerator do |x,y,i,j| %>
+      <use href="#hex" transform="translate(<%=x%>,<%=i % 2 == 0 ? y : y + Game::HEX_H / 2 %>)" /> 
+    <% end %> 
   </g>
 </svg>
