visualize build cost on hex
refactor column alignment to the enumerator

--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -6,11 +6,12 @@
   </defs>
 
   <g class="hex-wrap">
-    <% @game.grid_enumerator do |x,y,i,j| %>
-      <use href="#hex" transform="translate(<%=x%>,<%=i % 2 == 0 ? y : y + Game::HEX_H / 2 %>)" /> 
-      <% if @game.built?(Game::COL_ALPHA[i]+j.to_s) %>
+    <% @game.grid_enumerator do |x,y,i,j,coordinate| %>
+      <use href="#hex" transform="translate(<%=x%>,<%=y%>)" /> 
+      <% if @game.built?(coordinate) %>
         <rect x="<%=x%>" y="<%=y%>" width=3 height=3 fill="violet" />
       <% end %>
+      <text x="<%=x %>" y="<%=y%>">-<%= @game.build_cost(coordinate) %></text>
     <% end %> 
   </g>
 </svg>
