--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -1,17 +1,19 @@
-<svg viewBox="0 0 100 100" class="board">
-  <defs>
-    <g id="hex">
-      <polygon stroke="#000000" stroke-width="0.5" points="5, -9 -5,-9 -10, 0 -5, 9 5, 9 10, 0" />
-    </g>
-  </defs>
+<div data-controller="hex">
+  <svg viewBox="0 0 100 100" class="board">
+    <defs>
+      <g id="hex">
+        <polygon stroke="#000000" stroke-width="0.5" points="5, -9 -5,-9 -10, 0 -5, 9 5, 9 10, 0" />
+      </g>
+    </defs>
 
-  <g class="hex-wrap">
-    <% @game.grid_enumerator do |x,y,i,j,coordinate| %>
-      <use href="#hex" transform="translate(<%=x%>,<%=y%>)" /> 
-      <% if @game.built?(coordinate) %>
-        <rect x="<%=x%>" y="<%=y%>" width=3 height=3 fill="violet" />
-      <% end %>
-      <text class="cost" x="<%=x-5 %>" y="<%=y-4%>">-<%= @game.build_cost(coordinate) %></text>
-    <% end %> 
-  </g>
-</svg>
+    <g class="hex-wrap">
+      <% @game.grid_enumerator do |x,y,i,j,coordinate| %>
+        <use href="#hex" transform="translate(<%=x%>,<%=y%>)" /> 
+        <% if @game.built?(coordinate) %>
+          <rect x="<%=x%>" y="<%=y%>" width=3 height=3 fill="violet" />
+        <% end %>
+        <text class="cost" x="<%=x-5 %>" y="<%=y-4%>">-<%= @game.build_cost(coordinate) %></text>
+      <% end %> 
+    </g>
+  </svg>
+</div>
