--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -7,12 +7,12 @@
     </defs>
 
     <g class="hex-wrap">
-      <% @game.grid_enumerator do |x,y,i,j,coordinate| %>
-        <use href="#hex" transform="translate(<%=x%>,<%=y%>)" class="<%= @game.hex_type(coordinate) %>" /> 
-        <% if @game.built?(coordinate) %>
-          <rect x="<%=x%>" y="<%=y%>" width=3 height=3 fill="violet" />
+      <% @game.grid_enumerator do |h| %>
+        <use href="#hex" transform="translate(<%=h.x%>,<%=h.y%>)" class="<%= h.type %>" /> 
+        <% if h.built %>
+          <rect x="<%=h.x%>" y="<%=h.y%>" width=3 height=3 fill="violet" />
         <% end %>
-        <text class="cost" x="<%=x-5 %>" y="<%=y-4%>">-<%= @game.build_cost(coordinate) %></text>
+        <text class="cost" x="<%=h.x-5 %>" y="<%=h.y-4%>">-<%= h.build_cost %></text>
       <% end %> 
     </g>
   </svg>
