--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -1,11 +1,10 @@
 <div data-controller="hex">
-  <svg viewBox="0 0 100 100" class="board">
+  <svg viewBox="0 0 450 300" class="board">
     <defs>
       <g id="hex">
-        <polygon stroke="#000000" stroke-width="0.5" points="5, -9 -5,-9 -10, 0 -5, 9 5, 9 10, 0" />
+        <polygon points="5, -9 -5,-9 -10, 0 -5, 9 5, 9 10, 0" />
       </g>
     </defs>
-
     <g class="hex-wrap">
       <% @game.grid_enumerator do |h| %>
         <use href="#hex" transform="translate(<%=h.x%>,<%=h.y%>)" class="<%= h.type %>" /> 
