--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,5 @@
 <nav>
   <%= link_to "games", games_path %>
+  <%= link_to "sign_in", new_user_session_path if not user_signed_in? %>
+  <%= link_to "log_out", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: "Wanna logout?" } if user_signed_in? %>
 </nav>
