Add game joining flow
Implemented with GamePlayers join table, joining a game assigns a
seat based on joining order - something to randomize later.

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -15,6 +15,15 @@
   </p>
 
   <p>
+    <strong>Joined:</strong>
+    <ol>
+      <% game.game_players.each do |game_player| %>
+        <li><%= game_player.user_id %> seat:<%= game_player.seat %></li>
+      <% end %>
+    </ol>
+  </p>
+
+  <p>
     <strong>State:</strong>
     <%= game.state %>
   </p>
