--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,7 +3,11 @@
 <%= link_to 'Join game', new_join_path(@game) unless current_user.in_game?(@game) %>
 <%= link_to 'Leave game', destroy_join_path(@game, current_user ), data: {turbo_method: :delete, turbo_confirm: "Are you sure to leave?"} if current_user.in_game?(@game) %>
 
-<%= link_to 'Build hex', new_build_path(@game) if current_user.acting?(@game) %>
+<% if @game.started? %>
+  <%= link_to 'Build hex', new_build_path(@game) if current_user.acting?(@game) %>
+<% else %>
+  <%= link_to 'Start game', start_game_path(@game), data: {turbo_method: :post } if @game.owner == current_user %>
+<% end %>
 <%= render @game %>
 
 <div>
