--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -9,7 +9,9 @@
       <% @game.grid_enumerator do |h| %>
         <use href="#hex" transform="translate(<%=h.x%>,<%=h.y%>)" class="<%= h.type %>" /> 
         <% if h.built %>
-          <rect x="<%=h.x%>" y="<%=h.y%>" width=3 height=3 fill="violet" />
+          <% h.built.each_with_index do |color, i| %>
+            <rect x="<%=(h.x-7) + i*4 %>" y="<%=h.y-2%>" width=3 height=3 fill="<%= color %>" />
+          <% end %>
         <% end %>
         <text class="cost" x="<%=h.x-5 %>" y="<%=h.y-4%>">-<%= h.build_cost %></text>
       <% end %> 
