--- a/app/views/auctions/_new_bid_form.html.erb
+++ b/app/views/auctions/_new_bid_form.html.erb
@@ -6,7 +6,7 @@
 
   <div>
     <%= form.label :bid, style: "display: block" %>
-    <%= form.number_field :bid, in: @game.state['high_bid'].to_i..100 %>
+    <%= form.number_field :bid, in: 1..100 %>
   </div>
 
   <div>
