--- a/app/views/games/_company.html.erb
+++ b/app/views/games/_company.html.erb
@@ -1,10 +1,11 @@
-<div class="company <%= company[:color] %>">
-  <dl>
-    <dt>Money:</dt>
-    <dd><%= company['money'] %></dd>
-    <dt>Shares:</dt>
-    <dd><%= company['shares'] %></dd>
-    <dt>Tracks:</dt>
-    <dd><%= company['track'] %></dd>
-  </dl>
-</div>
+<article class="company <%= company[:color] %>">
+  <header><%= company[:color] %></header>
+    <dl class="sheet">
+      <dt>Money:</dt>
+      <dd><%= company['money'] %></dd>
+      <dt>Shares:</dt>
+      <dd><%= company['shares'] %></dd>
+      <dt>Tracks:</dt>
+      <dd><%= company['track'] %></dd>
+    </dl>
+</article>
