--- a/app/views/games/_company.html.erb
+++ b/app/views/games/_company.html.erb
@@ -1,11 +1,11 @@
 <article class="company <%= company[:color] %>">
   <header><%= company[:color] %></header>
     <dl class="sheet">
-      <dt>Money:</dt>
-      <dd><%= company['money'] %></dd>
-      <dt>Shares:</dt>
+      <dt>Money</dt>
+      <dd class="money"><%= company['money'] %></dd>
+      <dt>Shares</dt>
       <dd><%= company['shares'] %></dd>
-      <dt>Tracks:</dt>
+      <dt>Tracks</dt>
       <dd><%= company['track'] %></dd>
     </dl>
 </article>
