--- a/app/views/games/_company.html.erb
+++ b/app/views/games/_company.html.erb
@@ -1,5 +1,5 @@
 <article class="company <%= company[:color] %>">
-  <header><%= company[:color] %></header>
+  <header><%= company[:color].capitalize %></header>
     <dl class="sheet">
       <dt>Money</dt>
       <dd class="money"><%= company['money'] %></dd>
