--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -5,6 +5,7 @@ svg.board {
 .hex-wrap text.cost {
   font: 4px sans-serif;
   fill: red;
+  pointer-events: none;
 }
 
 .hex-wrap text.coord {
@@ -35,6 +36,11 @@ use.city {
 
 use.mountain {
   fill: #a9a9a9;
+}
+
+.selected {
+  stroke: purple;
+  stroke-width: 1;
 }
 
 .company-container {
