--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,7 +3,7 @@
 <%= link_to 'Join game', new_join_path(@game) unless current_user.in_game?(@game) %>
 <%= link_to 'Leave game', destroy_join_path(@game, current_user ), data: {turbo_method: :delete, turbo_confirm: "Are you sure to leave?"} if current_user.in_game?(@game) && !@game.started? %>
 
-<% if @game.started? and current_user.acting?(@game) %>
+<% if @game.started? && current_user.acting?(@game) %>
   <% if @game.phase?(:choose_action) %>
     <%= link_to 'Build hex', new_build_path(@game) %>
     <%= link_to 'Auction a share', new_auction_path(@game) %>
