add income data to map and visualize it

--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -8,6 +8,12 @@ svg.board {
   pointer-events: none;
 }
 
+.hex-wrap text.income {
+  font: 4px sans-serif;
+  fill: green;
+  pointer-events: none;
+}
+
 .hex-wrap text.coord {
   font: 4px sans-serif;
 }
