add round flow with limited action options

--- a/app/views/auctions/_new_auction_form.html.erb
+++ b/app/views/auctions/_new_auction_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :company, style: "display: block" %>
-    <%= form.select :company, @game.available_companies.map { |c| [c,c] } %>
+    <%= form.select :company, @game.available_companies_for_auction.map { |c| [c,c] } %>
   </div>
 
   <div>
