--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -30,11 +30,11 @@
             <% end %>
           <% end %>
           <text class="cost" x="<%=h.x-5 %>" y="<%=h.y-4%>">-<%= h.build_cost %></text>
-          <% unless h.income == "0" %>
+          <% unless h.income.zero? %>
             <text class="income" x="<%= h.x - 1 %>" y="<%=h.y-4%>"><%= h.income %></text>
           <% end %>
 
-          <% unless h.development == "0" %>
+          <% unless h.development == 0 %>
             <text class="development" x="<%= h.x + 2 %>" y="<%= h.y - 4 %>"><%= h.development %></text>
           <% end %>
 
