--- a/app/views/developments/_development_form.html.erb
+++ b/app/views/developments/_development_form.html.erb
@@ -27,5 +27,13 @@
       <%= form.submit "Develop" %>
     </div>
   </div> 
+<% end %>
 
+<%= form_with url: pass_action_path do |form| %>
+  <div>
+    <%= form.hidden_field :action_type, value: 'developments' %>
+  </div>
+  <div>
+    <%= form.submit 'Pass development' %>
+  </div>
 <% end %>
