--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -6,6 +6,7 @@
 
   <%= render 'games/companies' if @game.started? %>
   <%= render 'games/actions' if @game.started? %>
+  <%= render 'games/players' if @game.started? %>
 
   <p>
       <strong>Started:</strong>
