Align board to the right
next to the state on the left. Split the large css file into
logical chunks.

--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -1,185 +1,14 @@
-svg.board {
-  flex: 1;
+.game {
+  display: grid;
+  grid-template-columns: [state-start] 1fr [state-end] 5em [board-start] 2fr 2fr [board-end]
 }
 
-.hex-wrap text.cost {
-  font: 3px sans-serif;
-  fill: red;
-  pointer-events: none;
+.state-container {
+  grid-column-start: state-start;
+  grid-column-end: state-end;
 }
 
-.hex-wrap text.income {
-  font: 3px sans-serif;
-  fill: green;
-  pointer-events: none;
-}
-
-.hex-wrap text.development {
-  font: 3px sans-serif;
-  fill: aqua;
-  pointer-events: none;
-}
-
-.hex-wrap text.coord {
-  font: 4px sans-serif;
-}
-
-use.undefined {
-  fill: #000080;
-}
-
-use.field {
-  fill: #ffd700;
-}
-
-use.forest {
-  fill: #228b22;
-}
-
-use.town {
-  fill: #fafdd2;
-}
-
-use.city {
-  fill: #a9a9a9;
-  stroke: red;
-  stroke-width: 1;
-}
-
-use.mountain {
-  fill: #a9a9a9;
-}
-
-.selected {
-  stroke: purple;
-  stroke-width: 1;
-}
-
-.player-container {
-  display: flex;
-  column-gap: 1em;
-}
-
-.player {
-  border-radius: 1em;
-  overflow: hidden;
-  line-height: 1.5em;
-}
-
-.player section {
-  background-color: antiquewhite;
-  margin: 0em;
-  padding: 1em;
-}
-
-.player header {
-  text-align: center;
-  padding: 0em 2em 0em;
-  background-color: dimgrey;
-}
-
-.player header.active {
-  background-color: forestgreen;
-}
-
-.player header.passed::after {
-  content: "*PASSED*";
-}
-
-.player-money {
-  font-size: x-large;
-  display: flex;
-  justify-content: center;
-}
-
-.player-money::after {
-  content: "$";
-}
-
-.player-shares table {
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-
-.player-shares tbody td {
-  text-align: center;
-  padding-left: 1em;
-}
-
-.company-container {
-  display: flex;
-  column-gap: 1em;
-}
-
-.action-container {
-  display: flex;
-  column-gap: 1em;
-}
-
-.action {
-  border-radius: 1em;
-  overflow: hidden;
-  line-height: 1.5em;
-}
-
-.action section {
-  background-color: antiquewhite;
-  margin: 0em;
-  padding: 1em;
-  display: flex;
-  justify-content: center;
-  font-size: x-large;
-}
-
-.action header {
-  justify-content: center;
-  display: flex;
-  padding: 0em 2em 0em;
-}
-
-.action header.available {
-  background-color: forestgreen;
-}
-
-.action header.unavailable {
-  background-color: brown;
-}
-
-article.company {
-  border-radius: 1em;
-  overflow: hidden;
-  line-height: 1.5em;
-}
-
-.company header {
-  justify-content: center;
-  display: flex;
-}
-
-.company .sheet {
-  background-color: antiquewhite;
-  margin: 0em;
-  padding: 1em;
-}
-
-.sheet dt::after {
-  content: ": ";
-}
-
-.sheet dd.money::after {
-  content: " $"
-}
-
-.company.red header {
-  background-color: brown;
-}
-
-.company.blue header {
-  background-color: dodgerblue;
-}
-.company.green header {
-  background-color: darkolivegreen;
-}
-.company.yellow header {
-  background-color: goldenrod;
+.board-container {
+  grid-column-start: board-start;
+  grid-column-end: board-end;
 }
