Add auction view
So auctions are easier to play. couple of added tests.

--- a/app/views/games/_company.html.erb
+++ b/app/views/games/_company.html.erb
@@ -4,7 +4,7 @@
       <dt>Money</dt>
       <dd class="money"><%= company['money'] %></dd>
       <dt>Shares</dt>
-      <dd><%= company['shares'] %></dd>
+      <dd><%= company['shares'] - company['shares_sold'] %></dd>
       <dt>Tracks</dt>
       <dd><%= company['track'] %></dd>
       <dt>Income</dt>
