Broadcast all updates to game to listeners
Add turbo-stream tag to the game page to listen for changes in a
game channel. Broadcast the changes in all game state changing
controllers to the said channel.

Removed the references to @game instance variable as that errored
a lot in test while broadcasting straight from the model. It might
not be needed now in the controller broadcasting context, as I guess
the instance variable is there in every case, but I couldn't be bothered
to change the code :smoking:. It is now more explicit how the data
is passed between partials, I guess that is better.

Next step: The links to actions in the view are not rendered inside
the game partial and wont get rendered in the broadcasts. Make a
footer into the Actions card that has a link to them.

--- a/app/views/auctions/_new_auction_form.html.erb
+++ b/app/views/auctions/_new_auction_form.html.erb
@@ -1,11 +1,11 @@
-<%= link_to 'Back to game', game_path(@game) %>
+<%= link_to 'Back to game', game_path(game) %>
 <%= form_with url: start_auction_path do |form| %>
-  <% if @game.errors.any? %>
+  <% if game.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h2>
+      <h2><%= pluralize(game.errors.count, "error") %> prohibited this game from being saved:</h2>
 
       <ul>
-        <% @game.errors.each do |error| %>
+        <% game.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -14,7 +14,7 @@
 
   <div>
     <%= form.label :company, style: "display: block" %>
-    <%= form.select :company, @game.available_companies_for_auction.map { |c| [c,c] } %>
+    <%= form.select :company, game.available_companies_for_auction.map { |c| [c,c] } %>
   </div>
 
   <div>
