--- a/app/views/games/_company.html.erb
+++ b/app/views/games/_company.html.erb
@@ -10,6 +10,6 @@
       <dt>Income</dt>
       <dd><%= company['income'] %></dd>
       <dt>Per share</dt>
-      <dd><%= @game.company_income_per_share(company[:color]) %></dd>
+      <dd><%= game.company_income_per_share(company[:color]) %></dd>
     </dl>
 </article>
