--- a/app/views/games/_join_form.html.erb
+++ b/app/views/games/_join_form.html.erb
@@ -3,7 +3,7 @@
 
   <div>
     <%= form.label :game, style: "display: none" %>
-    <%= form.hidden_field :game_id, value: @game.id %>
+    <%= form.hidden_field :game_id, value: game.id %>
   </div>
 
   <div>
