--- a/app/views/auctions/_new_bid_form.html.erb
+++ b/app/views/auctions/_new_bid_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_with url: bid_path(@game) do |form| %>
+<%= form_with url: bid_path(game) do |form| %>
   <div>
     <%= form.label :company, style: "display: none" %>
-    <%= form.hidden_field :company, value: @game.state['auction'] %>
+    <%= form.hidden_field :company, value: game.state['auction'] %>
   </div>
 
   <div>
@@ -14,10 +14,10 @@
   </div>
 <% end %>
 
-<%= form_with url: pass_path(@game) do |form| %>
+<%= form_with url: pass_path(game) do |form| %>
   <div>
     <%= form.label :company, style: "display: none" %>
-    <%= form.hidden_field :company, value: @game.state['auction'] %>
+    <%= form.hidden_field :company, value: game.state['auction'] %>
   </div>
 
   <div>
@@ -25,12 +25,12 @@
   </div>
 <% end %>
 
-<% if @game.errors.any? %>
+<% if game.errors.any? %>
   <div style="color: red">
-    <h2><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h2>
+    <h2><%= pluralize(game.errors.count, "error") %> prohibited this game from being saved:</h2>
 
     <ul>
-      <% @game.errors.each do |error| %>
+      <% game.errors.each do |error| %>
         <li><%= error.full_message %></li>
       <% end %>
     </ul>
