--- a/app/views/games/_auction.html.erb
+++ b/app/views/games/_auction.html.erb
@@ -1,14 +1,14 @@
 <div class="auction-container">
   <article class="auction">
-    <%= tag.header @game.state['auction'].capitalize, class: [@game.state['auction']] %>
-    <%= tag.section @game.state['high_bid'], class: "high-bid" %>
-    <%= tag.section "From "+@game.high_bidder_name, class: "high-bidder" %>
+    <%= tag.header game.state['auction'].capitalize, class: [game.state['auction']] %>
+    <%= tag.section game.state['high_bid'], class: "high-bid" %>
+    <%= tag.section "From "+game.high_bidder_name, class: "high-bidder" %>
 
-    <% if @game.players.size > 2 %>
+    <% if game.players.size > 2 %>
       <%= content_tag :section, class: "passers" do |content| %>
         <h4>Passers</h4>
         <%= content_tag :ol do |list| %>
-          <% @game.state['passers'].each do |passer| %>
+          <% game.state['passers'].each do |passer| %>
             <%= tag.li passer %>
           <% end %>
         <% end %> 
