--- a/app/views/games/_companies.html.erb
+++ b/app/views/games/_companies.html.erb
@@ -1,6 +1,6 @@
 <h3>Companies</h3>
 <div class="company-container">
-  <% @game.companies.each do |color, company| %>
-    <%= render "games/company", company: company.merge(color: color) if company['started'] %>
+  <% game.companies.each do |color, company| %>
+    <%= render "games/company", game: game, company: company.merge(color: color) if company['started'] %>
   <% end %>
 </div>
